--- a/webfolder/index.html
+++ b/webfolder/index.html
@@ -57,7 +57,7 @@ ul {
   <br>
   <a href="08-randomFont/index08.html">08-randomFont</a>
   <br>
-  <a href="09-maurerRose/">09-maurerRose</a>
+  <a href="09-maurerRose/index09.html">09-maurerRose</a>
   <br>
   <a href="10-saskiaFreeke/">10-saskiaFreeke</a>
   <br>
