--- a/webfolder/index.html
+++ b/webfolder/index.html
@@ -63,7 +63,7 @@ ul {
   <br>
   <a href="11-additiveSynthesisOnACircle/">11-additiveSynthesisOnACircle</a>
   <br>
-  <a href="12-fractalTree/">12-fractalTree</a>
+  <a href="12-fractalTree/index12.html">12-fractalTree</a>
   <br>
   <a href="13-playWithPrimitives/">13-playWithPrimitives</a>
   <br>
