--- a/webfolder/index.html
+++ b/webfolder/index.html
@@ -65,9 +65,9 @@ ul {
   <br>
   <a href="12-fractalTree/index12.html">12-fractalTree</a>
   <br>
-  <a href="13-playWithPrimitives/">13-playWithPrimitives</a>
+  <a href="13-playWithPrimitives/index13.html">13-playWithPrimitives</a>
   <br>
-  <a href="14-basicSolarSystem/">14-basicSolarSystem</a>
+  <a href="14-basicSolarSystem/index14.html">14-basicSolarSystem</a>
   <br>
   <a href="15-RGBCube/">15-RGBCube</a>
   <br>
