--- a/webfolder/index.html
+++ b/webfolder/index.html
@@ -69,15 +69,15 @@ ul {
   <br>
   <a href="14-basicSolarSystem/index14.html">14-basicSolarSystem</a>
   <br>
-  <a href="15-RGBCube/">15-RGBCube</a>
+  <a href="15-RGBCube/index15.html">15-RGBCube</a>
   <br>
-  <a href="16-proceduralGenerationOfColours/">16-proceduralGenerationOfColours</a>
+  <a href="16-proceduralGenerationOfColours/index16.html">16-proceduralGenerationOfColours</a>
   <br>
-  <a href="17-slitScanning/">17-slitScanning</a>
+  <a href="17-slitScanning/index17.html">17-slitScanning</a>
   <br>
-  <a href="18-softwareMirror/">18-softwareMirror</a>
+  <a href="18-softwareMirror/index18.html">18-softwareMirror</a>
   <br>
-  <a href="19-fishermansTales/">19-fishermansTales</a>
+  <a href="19-fishermansTales/index19.html">19-fishermansTales</a>
   <br>
   <a href="20-opticalFlowController/">20-opticalFlowController</a>
   <br>
