--- a/webfolder/index.html
+++ b/webfolder/index.html
@@ -79,8 +79,8 @@ ul {
   <br>
   <a href="19-fishermansTales/index19.html">19-fishermansTales</a>
   <br>
-  <a href="20-opticalFlowController/">20-opticalFlowController</a>
+  <a href="20-opticalFlowController/index20.html">20-opticalFlowController</a>
   <br>
-  <a href="21-faceController/">21-faceController</a>
+  <a href="21-faceController/index21.html">21-faceController</a>
 </body>
 </html>
